Fix footer align items for Desktop
fixed some footer alignment issues for desktop view

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -262,8 +262,7 @@ nav.main {
   .main-logo {
     margin-bottom: 0.8em;
   }
-  .all-containing-container,
-  .good-for-tablet {
+  .all-containing-container {
     @include breakpoint(0) {
       flex-direction: column;
       align-items: center;
@@ -275,6 +274,7 @@ nav.main {
       max-width: 100%;
     }
     @include breakpoint($tablet) {
+      align-items: flex-start;
       flex-direction: row;
       max-width: 100%;
     }
